--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.0.0-alpha.7",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bulma": "^0.9.4",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-animated-heart": "^0.0.7",
     "react-dom": "^18.2.0",
     "react-image-size": "^1.0.5",
     "react-router-dom": "^6.3.0",
